--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -57,7 +57,7 @@ You can use either or both of the sites at the same time.
  * From version 2.8.1+, the Trakt.tv support will be moved to its own process plugin called [http://forum.team-mediaportal.com/mediaportal-plugins-47/0-9-3-0-trakt-mediaportal-94872/ Trakt for Mediaportal]. This plugin will be included with the MP-TVSeries installer should you wish to install it.
 
    ===Installation===
-   You can install the Trakt process plugin from the MP-TVSeries installation program, a installation wiki is available [http://code.google.com/p/mptvseries/wiki/Installation?ts=1302228665&updated=Installation# here]. Optionally you can download the TraktPlugin.dll manually and copy it into \Team MediaPortal\MediaPortal\plugins\process
+   You can install the Trakt process plugin from the MP-TVSeries installation program, a installation wiki is available [http://code.google.com/p/mptvseries/wiki/Installation?ts=1302228665&updated=Installation# here]. Optionally you can [https://github.com/Technicolour/Trakt-for-Mediaportal/downloads/ download] the TraktPlugin.dll manually and copy it into \Team MediaPortal\MediaPortal\plugins\process
 
    ===Configuration During Install===
 
@@ -74,7 +74,7 @@ You can use either or both of the sites at the same time.
  * Load Mediaportal Configuration, Plugins.
  * Load _Trakt_ which is under 'Process Plugins'
  * Type in your trakt.tv username and password
- * Check the box for MP-TVSeries
+ * Check the box for MP-TVSeries and any optional plugin
  * Click OK
  http://mptvseries.googlecode.com/svn/wiki/Images/TraktConfig.jpg
 
