Edited wiki page FAQ through web user interface.

--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -33,11 +33,11 @@ There are 3 ways you can receive support for the plugin, Submitting log files an
 
 =Integration with Social Media Websites =
 
-MP-TVSeries optionally integrates with the [http://follw.it follw.it] and [http://trakt.tv trakt.tv] websites, which are built around sharing with your friends what shows and movies you are into.
+MP-TVSeries optionally integrates with the [http://follw.it follw.it] and [http://trakt.tv trakt.tv] and [http://myshows.ru myshows.ru websites, which are built around sharing with your friends what shows and movies you are into.
 
-One of the advantages to connecting to one or both of the sites is the syncronisation of your watch flags and ratings, which we recommend. This is very useful if you have multiple htpcs, or if you need to start your tv series database from scratch.
+One of the advantages to connecting to one or all of the sites is the syncronisation of your watch flags and ratings, which we recommend. This is very useful if you have multiple htpcs, or if you need to start your tv series database from scratch.
 
-You can use either or both of the sites at the same time.
+You can use any or all of the sites at the same time.
 
 ==Follw.it==
 
@@ -77,6 +77,20 @@ You can use either or both of the sites at the same time.
  * Check the box for MP-TVSeries and any optional plugin
  * Click OK
  http://mptvseries.googlecode.com/svn/wiki/Images/TraktConfig.jpg
+
+==myshows.ru==
+
+  This site is russian analog for Trakt/Follw.it
+  * Watch this space - more information coming soon
+
+  ===Installation==
+  
+  * Coming Soon
+
+  ===Configuration===
+
+  * Coming Soon
+
 
 ----
 
