--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -80,19 +80,20 @@ You can use any or all of the sites at the same time.
 
 ==myshows.ru==
 
-  For Russian MP users Myshows.ru is supported. Now it is possible to mark episodes as watched automatically after playback and toggle watched status manually from Mediaportal. 
+  For Russian MP users [http://www.myshows.ru myshows.ru] is supported. Now it is possible to mark episodes as watched automatically after playback and toggle watched status manually from Mediaportal. 
 
   ===Installation==
   
-  Download Myshows Plugin.dll and copy it into \Team MediaPortal\MediaPortal\plugins\process 
+  [http://mptvseries.googlecode.com/issues/attachment?aid=5780006000&name=MyShows+Plugin.zip&token=acfeb9d26cdfec55cfc8baf04d2afd73 Download] Myshows Plugin.dll and copy it into \Team MediaPortal\MediaPortal\plugins\process 
 
   ===Configuration===
 
-  * Load MYSHOWS from Mediaportal Configuration, Plugins.
+  * Load 'MyShowsPlugin' from Mediaportal Configuration, Plugins.
   * Enter your myshows.ru login and password
-  * Click "test" to verify connection
+  * Click "Test Login" to verify your credentials
   * Click "Save" in plugin config
   * Click "OK" in Mediaportal Configuration to save settings.
+http://mptvseries.googlecode.com/svn/wiki/Images/MyShowsConfig.jpg
 
 ----
 
