Updated trakt plugin files to v1.0.5 in trunk.

--- a/Languages/TraktPlugin/en-US.xml
+++ b/Languages/TraktPlugin/en-US.xml
@@ -7,12 +7,19 @@
   <string Field="Account">Account</string>
   <string Field="AccountSetup">Account Setup</string>
   <string Field="AccountDialog">Account Dialog</string>
+  <string Field="AddFriend">Add Friend...</string>
   <string Field="AddToLibrary">Add to Library</string>
   <string Field="AddToWatchList">Add to Watch List</string>
+  <string Field="AddShowToWatchList">Add Show to Watch List</string>
+  <string Field="AddEpisodeToWatchList">Add Episode to Watch List</string>
   <string Field="AddThisItemToWatchList">Add this item to your watch list?</string>
+  <string Field="Age">Age</string>
   <string Field="AirDate">Air Date</string>
   <string Field="AirDay">Air Day</string>
   <string Field="AirTime">Air Time</string>
+  <string Field="Approve">Approve</string>
+  <string Field="ApprovedDate">Approved Date</string>
+  <string Field="ApproveFriendMessage">Would you like to add user {0}\nas a friend?</string>
   
   <!-- B -->
   
@@ -21,6 +28,7 @@
   <string Field="Calendar">Calendar</string>
   <string Field="CalendarMyShows">My Shows</string>
   <string Field="CalendarPremieres">Premieres</string>
+  <string Field="CalendarAllShows">All Shows</string>
   <string Field="Certification">Certification</string>
   <string Field="ChangeView">Change View...</string>
   <string Field="ChangeLayout">Change Layout...</string>
@@ -28,8 +36,20 @@
   <string Field="CreateAccount">Create Account</string>
   <string Field="CreateNewAccount">Create New Account...</string>
   <string Field="CreatingAccount">Creating Account...</string>
+  <string Field="CreateMovingPicturesCategories">Create Moving Pictures Categories</string>
+  <string Field="CreateMovingPicturesFilters">Create Moving Pictures Filters</string>
+  <string Field="CreatingCategories">Creating Categories</string>
+  <string Field="CreatingFilters">Creating Filters</string>
   
   <!-- D -->
+  <string Field="DateToday">Today</string>
+  <string Field="DateYesterday">Yesterday</string>
+  <string Field="DateOneWeekAgo">1 Week Ago</string>
+  <string Field="DateTwoWeeksAgo">2 Weeks Ago</string>
+  <string Field="DateOneMonthAgo">1 Month Ago</string>
+  <string Field="Deny">Deny</string>
+  <string Field="DeleteFriend">Delete Friend</string>
+  <string Field="DeleteFriendMessage">Are you sure you want to delete\n{0} as a friend?</string>
   <string Field="DisconnectAccount">Disconnect Account: {0}</string>
   <string Field="DownloadFanart">Download Fanart</string>
   <string Field="DownloadFullSizeFanart">Download Original Size Fanart</string>
@@ -45,15 +65,21 @@
   <string Field="FirstAired">First Aired</string>
   <string Field="Friend">Friend</string>
   <string Field="Friends">Friends</string>
+  <string Field="FriendRequest">Friend Request</string>
+  <string Field="FriendRequestMessage">You have {0} friend requests, approve or deny from friends window</string>
   <string Field="FullName">Full Name</string>
   
   <!-- G -->
   <string Field="Gender">Gender</string>
   <string Field="General">General</string>
   <string Field="GeneralSettings">GeneralSettings</string>
+  <string Field="GetFriendRequestsOnStartup">Get Friend Requests on Startup</string>
   <string Field="GettingCalendar">Getting Calendar</string>
   <string Field="GettingFriendsList">Getting Friends List</string>
+  <string Field="GettingFriendsRequests">Getting Friend Requests</string>
   <string Field="GettingFriendsWatchedHistory">Getting Friends Watched History</string>
+  <string Field="GettingSearchResults">Getting Search Results</string>
+  <string Field="GettingShouts">Getting Shouts</string>
   <string Field="GettingTrendingMovies">Getting Trending Movies</string>
   <string Field="GettingTrendingShows">Getting Trending Shows</string>
   <string Field="GettingRecommendedMovies">Getting Recommended Movies</string>
@@ -65,6 +91,7 @@
   <!-- H -->
   <string Field="Hate">Hate</string>
   <string Field="Hated">Hated</string>
+  <string Field="HideTVShowsInWatchlist">Hide TV Shows in Watch List</string>
   
   <!-- I -->
   <string Field="Inserted">Inserted</string>
@@ -103,18 +130,22 @@
   <string Field="NoTrendingShows">No Shows current being watched!</string>
   <string Field="NoMovieRecommendations">No Movie Recommendations Found!</string>
   <string Field="NoShowRecommendations">No Show Recommendations Found!</string>
-  <string Field="NoShowWatchList">No Shows in Watch List!</string>
-  <string Field="NoMovieWatchList">No Movies in Watch List!</string>
-  <string Field="NoEpisodeWatchList">No Episodes in Watch List!</string>
+  <string Field="NoShowWatchList">{0} has no shows in Watch List!</string>
+  <string Field="NoMovieWatchList">{0} has no movies in Watch List!</string>
+  <string Field="NoEpisodeWatchList">{0} has no episodes in Watch List!</string>
+  <string Field="NoShoutsForItem">No Shouts for {0}!</string>
   <string Field="NoPluginsEnabled">You have defined no plugins in configuration.\nWould you like to configure plugins now?</string>
   <string Field="NotLoggedIn">You can not access this area without being\nlogged in. Would you like to Signup or Login\nto trakt.tv now?</string>
-
+  <string Field="NoSearchResultsFound">No Search Results Found</string>
+  <string Field="NoMovingPictures">Moving Pictures is Not Installed or Enabled</string>
+  
   <!-- O -->
   <string Field="OK">OK</string>
   <string Field="Overview">Overview</string>
   
   <!-- P -->
   <string Field="Password">Password</string>
+  <string Field="People">People</string>
   <string Field="Percentage">Percentage</string>
   <string Field="Protected">Protected</string>
   <string Field="PersonWatching">1 Person Watching</string>
@@ -139,21 +170,33 @@
   <string Field="ReleaseDate">Release Date</string>
   <string Field="RemoveFromLibrary">Remove from Library</string>
   <string Field="RemoveFromWatchList">Remove from Watch List</string>
+  <string Field="RemoveShowFromWatchList">Remove Show from Watch List</string>
+  <string Field="RemoveEpisodeFromWatchList">Remove Episode from Watch List</string>
   <string Field="Runtime">Runtime</string>
   
   <!-- S -->
   <string Field="Score">Score</string>
-  <string Field="Season">Season</string>  
+  <string Field="Season">Season</string>
+  <string Field="SearchForFriend">Search for Friend...</string>
+  <string Field="SendFriendRequest">Send friend request to {0}?</string>
   <string Field="Series">Series</string>
   <string Field="SeriesPlural">Series</string>
   <string Field="Settings">Settings</string>
+  <string Field="Shout">Shout</string>
+  <string Field="Shouts">Shouts</string>
+  <string Field="ShowTVShowsInWatchlist">Show TV Shows in Watch List</string>
   <string Field="SigningIntoAccount">Signing Into Account...</string>
+  <string Field="StartDate">Start Date</string>
+  <string Field="Synchronize">Synchronize</string>
+  <string Field="SynchronizeNow">New Plugin Handlers have been added.\nWould you like to Synchronize your\nlibraries now?</string>
   
   <!-- T -->
   <string Field="Timeout">Timeout</string>
   <string Field="Trending">Trending</string>
   <string Field="TrendingShows">Trending Shows</string>
   <string Field="TrendingMovies">Trending Movies</string>
+  <string Field="TrendingMoviePeople">There are {0} people watching {1} movies right now!</string>
+  <string Field="TrendingTVShowsPeople">There are {0} people watching {1} tv shows right now!</string>
   <string Field="TVShow">TV Show</string>
   <string Field="TVShows">TV Shows</string>
   <string Field="Tagline">Tagline</string>
@@ -165,8 +208,11 @@
   <string Field="UserHasNotWatchedEpisodes">User has not watched any episodes!</string>
   <string Field="UserHasNotWatchedMovies">User has not watched any movies!</string>
   <string Field="User">User</string>
+  <string Field="Users">Users</string>
   <string Field="Username">Username</string>
   <string Field="UnAuthorized">Authentication failed, please check username and password in settings.</string>
+  <string Field="UpdatingCategories">Updating Categories</string>
+  <string Field="UpdatingFilters">Updating Filters</string>
   
   <!-- V -->
   <string Field="View">View</string>
