--- a/Languages/TraktPlugin/no.xml
+++ b/Languages/TraktPlugin/no.xml
@@ -7,11 +7,19 @@
   <string Field="Account">Konto</string>
   <string Field="AccountSetup">Oppsett for konto</string>
   <string Field="AccountDialog">Dialog konto</string>
+  <string Field="AddFriend">Add Friend...</string>
   <string Field="AddToLibrary">Legg til i biblioteket</string>
   <string Field="AddToWatchList">Legg til i ønsker å se</string>
+  <string Field="AddShowToWatchList">Add Show to Watch List</string>
+  <string Field="AddEpisodeToWatchList">Add Episode to Watch List</string>
+  <string Field="AddThisItemToWatchList">Add this item to your watch list?</string>
+  <string Field="Age">Age</string>
   <string Field="AirDate">Dato</string>
   <string Field="AirDay">Dag</string>
   <string Field="AirTime">Klokkeslett</string>
+  <string Field="Approve">Approve</string>
+  <string Field="ApprovedDate">Approved Date</string>
+  <string Field="ApproveFriendMessage">Would you like to add user {0}\nas a friend?</string>
   
   <!-- B -->
   
@@ -20,6 +28,7 @@
   <string Field="Calendar">Kalender</string>
   <string Field="CalendarMyShows">Mine Serier</string>
   <string Field="CalendarPremieres">Premiere</string>
+  <string Field="CalendarAllShows">All Shows</string>
   <string Field="Certification">Sertifisering</string>
   <string Field="ChangeView">Bytt visning...</string>
   <string Field="ChangeLayout">Bytt utseende...</string>
@@ -29,6 +38,14 @@
   <string Field="CreatingAccount">Lager konto...</string>
   
   <!-- D -->
+  <string Field="DateToday">Today</string>
+  <string Field="DateYesterday">Yesterday</string>
+  <string Field="DateOneWeekAgo">1 Week Ago</string>
+  <string Field="DateTwoWeeksAgo">2 Weeks Ago</string>
+  <string Field="DateOneMonthAgo">1 Month Ago</string>
+  <string Field="Deny">Deny</string>
+  <string Field="DeleteFriend">Delete Friend</string>
+  <string Field="DeleteFriendMessage">Are you sure you want to delete\n{0} as a friend?</string>
   <string Field="DisconnectAccount">Koble fra konto: {0}</string>
   <string Field="DownloadFanart">Last ned Fanart</string>
   <string Field="DownloadFullSizeFanart">Bruk original størrelse på Fanart</string>
@@ -44,15 +61,21 @@
   <string Field="FirstAired">Først sendt</string>
   <string Field="Friend">Venn</string>
   <string Field="Friends">Venner</string>
+  <string Field="FriendRequest">Friend Request</string>
+  <string Field="FriendRequestMessage">You have {0} friend requests, approve or deny from friends window</string>
   <string Field="FullName">Fult Navn</string>
   
   <!-- G -->
   <string Field="Gender">Kjønn</string>
   <string Field="General">Generelt</string>
   <string Field="GeneralSettings">Generelle innstillinger</string>
+  <string Field="GetFriendRequestsOnStartup">Get Friend Requests on Startup</string>
   <string Field="GettingCalendar">Henter kalender</string>
   <string Field="GettingFriendsList">Henter liste med venner</string>
+  <string Field="GettingFriendsRequests">Getting Friend Requests</string>
   <string Field="GettingFriendsWatchedHistory">Henter hva venner har sett</string>
+  <string Field="GettingSearchResults">Getting Search Results</string>
+  <string Field="GettingShouts">Getting Shouts</string>
   <string Field="GettingTrendingMovies">Henter populære filmer</string>
   <string Field="GettingTrendingShows">Henter populære serier</string>
   <string Field="GettingRecommendedMovies">Henter anbefalte filmer</string>
@@ -64,6 +87,7 @@
   <!-- H -->
   <string Field="Hate">Hater</string>
   <string Field="Hated">Hatet</string>
+  <string Field="HideTVShowsInWatchlist">Hide TV Shows in Watch List</string>
   
   <!-- I -->
   <string Field="Inserted">Satt inn</string>
@@ -100,20 +124,23 @@
   <string Field="NoFriendsTaunt">Du har ingen venner!</string>
   <string Field="NoTrendingMovies">Ingen filmer blir vises for øyeblikket!</string>
   <string Field="NoTrendingShows">Ingen serier vises for øyeblikket!</string>
-  <string Field="NoMovieRecommendations">Ingen anbefalinger for filmer funnet!</string>
-  <string Field="NoShowRecommendations">Ingen anbefalinger for serier funnet!</string>
-  <string Field="NoShowWatchList">Ingen serier i sett listen!</string>
+  <string Field="NoShowWatchList">{0} has no shows in Watch List!</string>
+  <string Field="NoMovieWatchList">{0} has no movies in Watch List!</string>
+  <string Field="NoEpisodeWatchList">{0} has no episodes in Watch List!</string>
   <string Field="NoMovieWatchList">Ingen filmer i sett listen!</string>
   <string Field="NoEpisodeWatchList">Ingen episoder i sett listen!</string>
+  <string Field="NoShoutsForItem">No Shouts for {0}!</string>
   <string Field="NoPluginsEnabled">Du har ikke konfigurert tillegget i innstillinger.\nVil du konfigurere tillegget nå?</string>
   <string Field="NotLoggedIn">Du må være logget inn for å vise dette området.\nVil du bli med eller logge inn\npå trakt.tv nå?</string>
-
+  <string Field="NoSearchResultsFound">No Search Results Found</string>
+  
   <!-- O -->
   <string Field="OK">OK</string>
   <string Field="Overview">Oversikt</string>
   
   <!-- P -->
   <string Field="Password">Passord</string>
+  <string Field="People">People</string>
   <string Field="Percentage">Prosent</string>
   <string Field="Protected">Beskyttet</string>
   <string Field="PersonWatching">1 Person ser på</string>
@@ -138,21 +165,30 @@
   <string Field="ReleaseDate">Utgitt dato</string>
   <string Field="RemoveFromLibrary">Fjern fra biblioteket</string>
   <string Field="RemoveFromWatchList">Fjern fra sett listen</string>
+  <string Field="RemoveShowFromWatchList">Remove Show from Watch List</string>
+  <string Field="RemoveEpisodeFromWatchList">Remove Episode from Watch List</string>
   <string Field="Runtime">Lengde</string>
   
   <!-- S -->
   <string Field="Score">Score</string>
-  <string Field="Season">Sesong</string>  
+  <string Field="Season">Sesong</string>
+  <string Field="SearchForFriend">Search for Friend...</string>
+  <string Field="SendFriendRequest">Send friend request to {0}?</string>
   <string Field="Series">Serie</string>
   <string Field="SeriesPlural">Serier</string>
   <string Field="Settings">Innstillinger</string>
+  <string Field="Shout">Shout</string>
+  <string Field="Shouts">Shouts</string>
   <string Field="SigningIntoAccount">Logger inn på konto...</string>
+  <string Field="StartDate">Start Date</string>
   
   <!-- T -->
   <string Field="Timeout">Tiden gikk ut</string>
   <string Field="Trending">Hva er populært</string>
   <string Field="TrendingShows">Populære serier</string>
   <string Field="TrendingMovies">Populære filmer</string>
+  <string Field="TrendingMoviePeople">There are {0} people watching {1} movies right now!</string>
+  <string Field="TrendingTVShowsPeople">There are {0} people watching {1} tv shows right now!</string>
   <string Field="TVShow">TV serie</string>
   <string Field="TVShows">TV serier</string>
   <string Field="Tagline">Tagline</string>
@@ -164,6 +200,7 @@
   <string Field="UserHasNotWatchedEpisodes">Brukeren har ikke sett noen episoder!</string>
   <string Field="UserHasNotWatchedMovies">Brukeren har ikke sett noen filmer!</string>
   <string Field="User">Bruker</string>
+  <string Field="Users">Users</string>
   <string Field="Username">Brukernavn</string>
   <string Field="UnAuthorized">Autentisering feilet, vennligst sjekk brukernavn og passord i innstillingene.</string>
   
