Edited wiki page Installation through web user interface.

--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -24,13 +24,23 @@ MP-TVSeries v3.1.0+ can now be installed via the Extension Installer. Note this 
 Click Start, Programs, Team Mediaportal, Mediaportal and select the 
 Mediaportal Extension Installer
 
+
  http://mptvseries.googlecode.com/svn/wiki/Images/MPE1-Extension-Installer-1.jpg
 
 Click 'Known extensions' Tab
 Select MP-TVSeries from the list
 Click 'Install'
+Click the Version you want to install.
+Click 'Yes' to install the plugin.
+
+You will now be presented with a installation wizard, the same 
+as the below screenshots.
+
+When you have finished the installation, close the Extension Installer.
 
  http://mptvseries.googlecode.com/svn/wiki/Images/MPE1-Extension-Installer-2.jpg
+
+
 
 
  == Install via Manual Download ==
