Edited wiki page Installation through web user interface.

--- a/wiki/Installation.wiki
+++ b/wiki/Installation.wiki
@@ -27,16 +27,15 @@ Mediaportal Extension Installer
 
  http://mptvseries.googlecode.com/svn/wiki/Images/MPE1-Extension-Installer-1.jpg
 
-Click 'Known extensions' Tab
-Select MP-TVSeries from the list
-Click 'Install'
-Click the Version you want to install.
-Click 'Yes' to install the plugin.
+* Click 'Known extensions' Tab
+* Select MP-TVSeries from the list
+* Click 'Install'
+* Click the Version you want to install.
+* Click 'Yes' to install the plugin.
 
 http://mptvseries.googlecode.com/svn/wiki/Images/MPE1-Extension-Installer-2.jpg
 
-You will now be presented with a Setup Wizard, as shown in the below
-screenshots.
+You will now be presented with a *Setup Wizard Installer*, as shown in the below screenshots.
 
 When you have finished the installation, close the Extension Installer.
 
@@ -47,6 +46,10 @@ Before you begin, download the latest mpe1 package from the [http://www.team-med
 To Start the Installation, open or double click on the MP-TVSeries-3.xxx.mpe1 (Setup requires administrative privileges so you may be prompted to enter in credentials).
 
 Note: this mpe1 installer requires atleast 1.2 RC and will not install on MP 1.2Beta
+
+You will now be presented with a *Setup Wizard Installer*, as shown in the below screenshots.
+
+----
  
  = Setup Wizard Installer=
 
